feat: add SMTP, e-mail verification and notifications
